--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,42 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+header {
+  /* border: 2px solid white; */
+  font-size: 20px;
+  /* border-radius: 5px; */
+  /* width: 1200px; */
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  /* position: fixed; */
+  top: 0;
+  left: 0;
+  width: 95%;
+  z-index: 1000;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.navbar-right {
+  /* margin: 10px; */
 }
 
-.card {
-  padding: 2em;
+.navbar-button {
+  margin: 10px;
+  padding: 10px;
+  /* border: 2px solid rgb(255, 255, 255); */
+  transition: 0.2s all;
+  border-radius: 5px;
+  
 }
 
-.read-the-docs {
-  color: #888;
+.navbar-button:active {
+  transform: scale(1.2)
 }
+
+/* .main-container {
+  height: 100vh;
+  width: 100vw;
+  /* background-color: red; */
+} */
+
