--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ header {
   left: 0;
   width: 95%;
   z-index: 1000;
+  min-width: 100%;
 }
 
 .navbar-right {
@@ -38,5 +39,14 @@ header {
   height: 100vh;
   width: 100vw;
   /* background-color: red; */
-} */
+
+
+select {
+  overflow-y: auto;
+}
+
+.idlePrompt {
+  position: absolute;
+  z-index: 99;
+}
 
